fix(tours): fix missing margin utility

--- a/ui-integration/embed/import-override.scss
+++ b/ui-integration/embed/import-override.scss
@@ -488,6 +488,10 @@ html body main > #wrapper {
     margin-left: 2rem !important;
 }
 
+.ml-4{
+    margin-left: 1rem !important;
+}
+
 .form-group {
     margin-bottom: 1rem;
 }
